2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

=== gtksourceview 1.0.0 ===

2004-03-22  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Version 1.0.0
	
	* README:
	* NEWS: Updated for new release.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-21  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-15  Alexander Winston  <alexander.winston@comcast.net>

	* configure.in (TESTS_LIBS): Added en_CA to ALL_LINGUAS.

2004-03-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/c.lang: handle #if 0 ... #else.

=== gtksourceview 0.9.2 ===

2004-03-08  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Bump version to 0.9.2

	* README:
	* NEWS: Updated for new release.

2004-03-07  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceiter.c (pointer_from_offset_skipping_decomp)
	(g_utf8_strcasestr, g_utf8_strrcasestr): Correctly return a pointer to
	the original string, taking into account decompositions in the
	normalized string which is used for the actual comparing.
	(forward_chars_with_skipping, lines_match, backward_lines_match): 
	Really fix searching now (sigh).

2004-03-06  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceiter.c (forward_chars_with_skipping):
	Account for extra offsets coming from decomposed UTF8 characters when
	moving the GtkTextIter forward (bug #135163).
	(backward_lines_match): Use forward_chars_with_skipping when moving to
	the start of the line match.

2004-03-06  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcelanguage.c
	(gtk_source_language_get_tag_default_style): Return a copy of a default
	tag style when the style is not found in the style scheme, or when the
	tag has no style associated with it (bug #136070, Dustin Mulcahey).
