@@ -1,3 +1,7 @@
+2004-04-13  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview.c: add documentation.
+
 2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
